--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@ permalink: /
               <img class="default-img" alt="Order from Restaurant" src="/images/order.png" width="100%" style="max-width: 210px;">
               <img class="hover-img" alt="Order from Restaurant" src="/images/order-restaurant.png" width="100%" style="max-width: 210px;">
               <h2>Order from Restaurant</h2>
-              <p>Tue-Sat 11am - 8pm</p>
+              <p>Sun-Mon <em>closed</em></p>
+              <p>Tue-Thur 11am - 8pm</p>
+              <p>Fri-Sat 11am - 10pm</p>
             </a>
 					</li>
 					<!-- <li class="text-center hp-cart">
@@ -76,8 +78,8 @@ permalink: /
               <p class="hours"><strong>Tuesday</strong> <span>11am - 8pm</span></p>
               <p class="hours"><strong>Wednesday</strong> <span>11am - 8pm</span></p>
               <p class="hours"><strong>Thursday</strong> <span>11am - 8pm</span></p>
-              <p class="hours"><strong>Friday</strong> <span>11am - 8pm</span></p>
-              <p class="hours"><strong>Saturday</strong> <span>11am - 8pm</span></p>
+              <p class="hours"><strong>Friday</strong> <span>11am - 10pm</span></p>
+              <p class="hours"><strong>Saturday</strong> <span>11am - 10pm</span></p>
             </div>
             <div class="col-md-6 col-12">
               <h3>Contact Us</h3>
