--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@ permalink: /
   					<div class="row">
   						<div class="col">
   							<h5 class="menu-headline">Banzo Bars</h5>
-  							<p>Our freshly prepared ingredients provide a little of everything for everyone. Each Banzo Bar comes ready as a self-serve buffet. $11.95 per person with a 15 person minimum.</p>
+  							<p>Our freshly prepared ingredients provide a little of everything for everyone. Each Banzo Bar comes ready as a self-serve buffet.</p>
+                <p>$11.95 per person with a 15 person minimum.</p>
   						</div>
   					</div>
   					<div class="row">
@@ -214,7 +215,8 @@ permalink: /
   					<div class="row">
   						<div class="col">
   							<h5 class="menu-headline">Party Trays</h5>
-  							<p>Mix and match to create your perfect menu for an event of any size. 48 ounce size recommended for 12-15 guests. 80 ounce size recommended for 20-25 guests.</p>
+  							<p>Mix and match to create your perfect menu for an event of any size.</p>
+                <p>48 ounce size recommended for 12-15 guests. 80 ounce size recommended for 20-25 guests.</p>
   						</div>
   					</div>
   					<div class="row d-flex justify-content-between">
@@ -281,7 +283,8 @@ permalink: /
 
   					<div class="row">
   						<div class="col">
-  							<p class="subtext">All catering orders must be placed 48 hours in advance. Chaffing equipment available for rent upon request</p>
+  							<p class="subtext">All catering orders must be placed 48 hours in advance.</p>
+                <p>Chaffing equipment available for rent upon request.</p>
   						</div>
   					</div>
 
