--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ permalink: /
               <img class="default-img" alt="Order from Restaurant" src="/images/order.png" width="100%" style="max-width: 210px;">
               <img class="hover-img" alt="Order from Restaurant" src="/images/order-restaurant.png" width="100%" style="max-width: 210px;">
               <h2>Order from Restaurant</h2>
-              <p>Sun-Mon <em>closed</em></p>
-              <p>Tue-Thur 11am - 8pm</p>
-              <p>Fri-Sat 11am - 10pm</p>
+              <p>Sun-Mon - <em>closed</em><br>
+              Tue-Thur 11am - 8pm<br>
+              Fri-Sat 11am - 10pm</p>
             </a>
 					</li>
 					<!-- <li class="text-center hp-cart">
