--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ permalink: /
   <div class="container">
     <div class="row p-3">
       <div class="col-12 text-center">
-      <h2>OPEN Tue-Sat 11am-8pm (Closed Sunday - Monday)</h2>
+      <h2>OPEN Tuesday - Saturday (Closed Sunday - Monday)</h2>
       <h5>Indoor dining room now open!</h5></div>
     </div>
   </div>
